added comments to cleaned data

--- a/Traffic.ipynb
+++ b/Traffic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,6 +47,7 @@
     "\n",
     "#     csvheader = next(csvreader) \n",
     "\n",
+    "# importing the csv file \n",
     "traffic_data = pd.read_csv(\"traffic-crashes-1 (2).csv\")\n",
     "\n",
     "traffic_data.columns"
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "d8e44207",
    "metadata": {},
    "outputs": [
@@ -190,12 +191,13 @@
        "4 -115.312353  36.327534  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#cleaning the columns, pulling the columns we want to base our analysis off of\n",
     "clean_traffic_data = traffic_data[[\"County\",\"Crash_Seve\",\"Crash_Date\",\"Weather\",\"Crash_Type\",\"V1_Driver1\",\"V1_Driver_\",\"Factors_Ro\",\"Lighting\",\"X\",\"Y\"]].copy()\n",
     "\n",
     "clean_traffic_data.head(5)"
@@ -203,7 +205,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
+   "id": "c95e8846",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "County        0.000000\n",
+       "Crash_Seve    0.000000\n",
+       "Crash_Date    0.000000\n",
+       "Weather       0.000000\n",
+       "Crash_Type    0.000000\n",
+       "V1_Driver1    0.132075\n",
+       "V1_Driver_    0.000000\n",
+       "Factors_Ro    0.106447\n",
+       "Lighting      0.101808\n",
+       "X             0.000000\n",
+       "Y             0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking columns to see if there is any missing data \n",
+    "clean_traffic_data.isnull().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "fc638e03",
    "metadata": {},
    "outputs": [
@@ -213,269 +248,19 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#clean_traffic_data.isnull().mean()\n",
+    "# double checking the type\n",
     "type(clean_traffic_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "bada493b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>County</th>\n",
-       "      <th>Crash_Seve</th>\n",
-       "      <th>Crash_Date</th>\n",
-       "      <th>Weather</th>\n",
-       "      <th>Crash_Type</th>\n",
-       "      <th>V1_Driver1</th>\n",
-       "      <th>V1_Driver_</th>\n",
-       "      <th>Factors_Ro</th>\n",
-       "      <th>Lighting</th>\n",
-       "      <th>X</th>\n",
-       "      <th>Y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CLARK</td>\n",
-       "      <td>PROPERTY DAMAGE ONLY</td>\n",
-       "      <td>01/01/2016</td>\n",
-       "      <td>CLEAR</td>\n",
-       "      <td>REAR-END</td>\n",
-       "      <td>APPARENTLY NORMAL</td>\n",
-       "      <td>49</td>\n",
-       "      <td>DRY</td>\n",
-       "      <td>DAYLIGHT</td>\n",
-       "      <td>-115.296856</td>\n",
-       "      <td>36.282588</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CLARK</td>\n",
-       "      <td>INJURY CRASH</td>\n",
-       "      <td>01/01/2016</td>\n",
-       "      <td>CLEAR</td>\n",
-       "      <td>NON-COLLISION</td>\n",
-       "      <td>HAD BEEN DRINKING</td>\n",
-       "      <td>22</td>\n",
-       "      <td>DRY</td>\n",
-       "      <td>DARK - NO LIGHTING</td>\n",
-       "      <td>-115.305960</td>\n",
-       "      <td>36.313917</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CLARK</td>\n",
-       "      <td>PROPERTY DAMAGE ONLY</td>\n",
-       "      <td>01/01/2016</td>\n",
-       "      <td>CLEAR</td>\n",
-       "      <td>NON-COLLISION</td>\n",
-       "      <td>HAD BEEN DRINKING</td>\n",
-       "      <td>22</td>\n",
-       "      <td>DRY</td>\n",
-       "      <td>DARK - CONTINUOUS LIGHTING</td>\n",
-       "      <td>-115.266269</td>\n",
-       "      <td>36.279880</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CLARK</td>\n",
-       "      <td>PROPERTY DAMAGE ONLY</td>\n",
-       "      <td>01/01/2016</td>\n",
-       "      <td>CLEAR</td>\n",
-       "      <td>NON-COLLISION</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>WET</td>\n",
-       "      <td>DARK - SPOT LIGHTING</td>\n",
-       "      <td>-115.283121</td>\n",
-       "      <td>36.278732</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CLARK</td>\n",
-       "      <td>PROPERTY DAMAGE ONLY</td>\n",
-       "      <td>01/01/2016</td>\n",
-       "      <td>CLEAR</td>\n",
-       "      <td>NON-COLLISION</td>\n",
-       "      <td>APPARENTLY NORMAL</td>\n",
-       "      <td>27</td>\n",
-       "      <td>DRY</td>\n",
-       "      <td>DARK - NO LIGHTING</td>\n",
-       "      <td>-115.312353</td>\n",
-       "      <td>36.327534</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12715</th>\n",
-       "      <td>CLARK</td>\n",
-       "      <td>PROPERTY DAMAGE ONLY</td>\n",
-       "      <td>12/31/2016</td>\n",
-       "      <td>CLOUDY</td>\n",
-       "      <td>NON-COLLISION</td>\n",
-       "      <td>HAD BEEN DRINKING</td>\n",
-       "      <td>24</td>\n",
-       "      <td>DRY</td>\n",
-       "      <td>DARK - CONTINUOUS LIGHTING</td>\n",
-       "      <td>-115.260731</td>\n",
-       "      <td>36.203052</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12716</th>\n",
-       "      <td>CLARK</td>\n",
-       "      <td>INJURY CRASH</td>\n",
-       "      <td>12/31/2016</td>\n",
-       "      <td>CLEAR</td>\n",
-       "      <td>NON-COLLISION</td>\n",
-       "      <td>FELL ASLEEP, FAINTED, FATIGUED, ETC.</td>\n",
-       "      <td>68</td>\n",
-       "      <td>DRY</td>\n",
-       "      <td>DAYLIGHT</td>\n",
-       "      <td>-115.329666</td>\n",
-       "      <td>36.239294</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12717</th>\n",
-       "      <td>CLARK</td>\n",
-       "      <td>INJURY CRASH</td>\n",
-       "      <td>12/31/2016</td>\n",
-       "      <td>CLOUDY</td>\n",
-       "      <td>REAR-END</td>\n",
-       "      <td>APPARENTLY NORMAL</td>\n",
-       "      <td>65</td>\n",
-       "      <td>DRY</td>\n",
-       "      <td>DARK - CONTINUOUS LIGHTING</td>\n",
-       "      <td>-115.322318</td>\n",
-       "      <td>36.218215</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12718</th>\n",
-       "      <td>CLARK</td>\n",
-       "      <td>INJURY CRASH</td>\n",
-       "      <td>12/31/2016</td>\n",
-       "      <td>CLOUDY</td>\n",
-       "      <td>ANGLE</td>\n",
-       "      <td>HAD BEEN DRINKING</td>\n",
-       "      <td>46</td>\n",
-       "      <td>DRY</td>\n",
-       "      <td>DARK - CONTINUOUS LIGHTING</td>\n",
-       "      <td>-115.251390</td>\n",
-       "      <td>36.240358</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12719</th>\n",
-       "      <td>CLARK</td>\n",
-       "      <td>PROPERTY DAMAGE ONLY</td>\n",
-       "      <td>12/31/2016</td>\n",
-       "      <td>CLOUDY</td>\n",
-       "      <td>NON-COLLISION</td>\n",
-       "      <td>APPARENTLY NORMAL</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-115.242232</td>\n",
-       "      <td>36.251773</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>12720 rows × 11 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      County            Crash_Seve  Crash_Date Weather     Crash_Type  \\\n",
-       "0      CLARK  PROPERTY DAMAGE ONLY  01/01/2016   CLEAR       REAR-END   \n",
-       "1      CLARK          INJURY CRASH  01/01/2016   CLEAR  NON-COLLISION   \n",
-       "2      CLARK  PROPERTY DAMAGE ONLY  01/01/2016   CLEAR  NON-COLLISION   \n",
-       "3      CLARK  PROPERTY DAMAGE ONLY  01/01/2016   CLEAR  NON-COLLISION   \n",
-       "4      CLARK  PROPERTY DAMAGE ONLY  01/01/2016   CLEAR  NON-COLLISION   \n",
-       "...      ...                   ...         ...     ...            ...   \n",
-       "12715  CLARK  PROPERTY DAMAGE ONLY  12/31/2016  CLOUDY  NON-COLLISION   \n",
-       "12716  CLARK          INJURY CRASH  12/31/2016   CLEAR  NON-COLLISION   \n",
-       "12717  CLARK          INJURY CRASH  12/31/2016  CLOUDY       REAR-END   \n",
-       "12718  CLARK          INJURY CRASH  12/31/2016  CLOUDY          ANGLE   \n",
-       "12719  CLARK  PROPERTY DAMAGE ONLY  12/31/2016  CLOUDY  NON-COLLISION   \n",
-       "\n",
-       "                                 V1_Driver1  V1_Driver_ Factors_Ro  \\\n",
-       "0                         APPARENTLY NORMAL          49        DRY   \n",
-       "1                         HAD BEEN DRINKING          22        DRY   \n",
-       "2                         HAD BEEN DRINKING          22        DRY   \n",
-       "3                                       NaN           0        WET   \n",
-       "4                         APPARENTLY NORMAL          27        DRY   \n",
-       "...                                     ...         ...        ...   \n",
-       "12715                     HAD BEEN DRINKING          24        DRY   \n",
-       "12716  FELL ASLEEP, FAINTED, FATIGUED, ETC.          68        DRY   \n",
-       "12717                     APPARENTLY NORMAL          65        DRY   \n",
-       "12718                     HAD BEEN DRINKING          46        DRY   \n",
-       "12719                     APPARENTLY NORMAL           0        NaN   \n",
-       "\n",
-       "                         Lighting           X          Y  \n",
-       "0                        DAYLIGHT -115.296856  36.282588  \n",
-       "1              DARK - NO LIGHTING -115.305960  36.313917  \n",
-       "2      DARK - CONTINUOUS LIGHTING -115.266269  36.279880  \n",
-       "3            DARK - SPOT LIGHTING -115.283121  36.278732  \n",
-       "4              DARK - NO LIGHTING -115.312353  36.327534  \n",
-       "...                           ...         ...        ...  \n",
-       "12715  DARK - CONTINUOUS LIGHTING -115.260731  36.203052  \n",
-       "12716                    DAYLIGHT -115.329666  36.239294  \n",
-       "12717  DARK - CONTINUOUS LIGHTING -115.322318  36.218215  \n",
-       "12718  DARK - CONTINUOUS LIGHTING -115.251390  36.240358  \n",
-       "12719                         NaN -115.242232  36.251773  \n",
-       "\n",
-       "[12720 rows x 11 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "43ed0fb4",
    "metadata": {},
    "outputs": [
@@ -716,12 +501,13 @@
        "[12720 rows x 11 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Renaming the columns \n",
     "clean_traffic_data = clean_traffic_data.rename(columns={\"Crash_Seve\": \"Crash Severity\",\n",
     "                                                        \"Crash_Date\": \"Crash Date\",\n",
     "                                                        \"Crash_Type\": \"Crash Type\",\n",
@@ -736,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "6bb43ed8",
    "metadata": {},
    "outputs": [
@@ -977,19 +763,20 @@
        "[9714 rows x 11 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# dropping the rows with nan \n",
     "clean_traffic_data = clean_traffic_data.dropna()\n",
     "clean_traffic_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "db91ab3e",
    "metadata": {},
    "outputs": [
@@ -999,12 +786,13 @@
        "9714"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# double checking new length of data frame\n",
     "len(clean_traffic_data)"
    ]
   },
