doing a git push and pull

--- a/Traffic.ipynb
+++ b/Traffic.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "bd3e01e6",
    "metadata": {},
    "outputs": [
     {
@@ -38,6 +39,7 @@
     "import scipy.stats as st\n",
     "import os\n",
     "\n",
+    "# testing git push and pull - Dee\n",
     "# importing the csv file\n",
     "csvpath = os.path.join(\"traffic-crashes-1 (2).csv\")\n",
     "\n",
@@ -232,7 +234,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
