created 5 statistical dataframes

--- a/Traffic.ipynb
+++ b/Traffic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,23 +39,20 @@
     "import os\n",
     "\n",
     "# importing the csv file\n",
-    "csvpath = os.path.join(\"traffic-crashes-1 (2).csv\")\n",
+    "# csvpath = os.path.join(\"traffic-crashes-1 (2).csv\")\n",
     "\n",
-    "with open(csvpath) as csvfile:\n",
-    "\n",
-    "    csvreader = csv.reader(csvfile, delimiter = \",\")\n",
-    "\n",
-    "    csvheader = next(csvreader) \n",
+    "# with open(csvpath) as csvfile:\n",
+    "#     csvreader = csv.reader(csvfile, delimiter = \",\")\n",
+    "#     csvheader = next(csvreader) \n",
     "\n",
     "traffic_data = pd.read_csv(\"traffic-crashes-1 (2).csv\")\n",
-    "\n",
     "traffic_data.columns\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "id": "d8e44207",
    "metadata": {},
    "outputs": [
@@ -191,40 +188,248 @@
        "4 -115.312353  36.327534  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clean_traffic_data = traffic_data[[\"County\",\"Crash_Seve\",\"Crash_Date\",\"Weather\",\"Crash_Type\",\"V1_Driver1\",\"V1_Driver_\",\"Factors_Ro\",\"Lighting\",\"X\",\"Y\"]].copy()\n",
-    "\n",
+    "clean_traffic_data = traffic_data[[\"County\",\n",
+    "                                   \"Crash_Seve\",\n",
+    "                                   \"Crash_Date\",\n",
+    "                                   \"Weather\",\n",
+    "                                   \"Crash_Type\",\n",
+    "                                   \"V1_Driver1\",\n",
+    "                                   \"V1_Driver_\",\n",
+    "                                   \"Factors_Ro\",\n",
+    "                                   \"Lighting\",\n",
+    "                                   \"X\",\n",
+    "                                   \"Y\"]].copy()\n",
     "clean_traffic_data.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "fc638e03",
+   "execution_count": 56,
+   "id": "82259fe1",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>County</th>\n",
+       "      <th>Crash Severity</th>\n",
+       "      <th>Crash Date</th>\n",
+       "      <th>Weather</th>\n",
+       "      <th>Crash Type</th>\n",
+       "      <th>Impairment Level</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Road Conditions</th>\n",
+       "      <th>Lighting</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CLARK</td>\n",
+       "      <td>PROPERTY DAMAGE ONLY</td>\n",
+       "      <td>01/01/2016</td>\n",
+       "      <td>CLEAR</td>\n",
+       "      <td>REAR-END</td>\n",
+       "      <td>APPARENTLY NORMAL</td>\n",
+       "      <td>49</td>\n",
+       "      <td>DRY</td>\n",
+       "      <td>DAYLIGHT</td>\n",
+       "      <td>-115.296856</td>\n",
+       "      <td>36.282588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CLARK</td>\n",
+       "      <td>INJURY CRASH</td>\n",
+       "      <td>01/01/2016</td>\n",
+       "      <td>CLEAR</td>\n",
+       "      <td>NON-COLLISION</td>\n",
+       "      <td>HAD BEEN DRINKING</td>\n",
+       "      <td>22</td>\n",
+       "      <td>DRY</td>\n",
+       "      <td>DARK - NO LIGHTING</td>\n",
+       "      <td>-115.305960</td>\n",
+       "      <td>36.313917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CLARK</td>\n",
+       "      <td>PROPERTY DAMAGE ONLY</td>\n",
+       "      <td>01/01/2016</td>\n",
+       "      <td>CLEAR</td>\n",
+       "      <td>NON-COLLISION</td>\n",
+       "      <td>HAD BEEN DRINKING</td>\n",
+       "      <td>22</td>\n",
+       "      <td>DRY</td>\n",
+       "      <td>DARK - CONTINUOUS LIGHTING</td>\n",
+       "      <td>-115.266269</td>\n",
+       "      <td>36.279880</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "12720"
+       "  County        Crash Severity  Crash Date Weather     Crash Type  \\\n",
+       "0  CLARK  PROPERTY DAMAGE ONLY  01/01/2016   CLEAR       REAR-END   \n",
+       "1  CLARK          INJURY CRASH  01/01/2016   CLEAR  NON-COLLISION   \n",
+       "2  CLARK  PROPERTY DAMAGE ONLY  01/01/2016   CLEAR  NON-COLLISION   \n",
+       "\n",
+       "    Impairment Level  Age Road Conditions                    Lighting  \\\n",
+       "0  APPARENTLY NORMAL   49             DRY                    DAYLIGHT   \n",
+       "1  HAD BEEN DRINKING   22             DRY          DARK - NO LIGHTING   \n",
+       "2  HAD BEEN DRINKING   22             DRY  DARK - CONTINUOUS LIGHTING   \n",
+       "\n",
+       "     Latitude  Longitude  \n",
+       "0 -115.296856  36.282588  \n",
+       "1 -115.305960  36.313917  \n",
+       "2 -115.266269  36.279880  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "clean_traffic_data = clean_traffic_data.rename(columns={\"Crash_Seve\": \"Crash Severity\",\n",
+    "                                                        \"Crash_Date\": \"Crash Date\",\n",
+    "                                                        \"Crash_Type\": \"Crash Type\",\n",
+    "                                                        \"V1_Driver1\":\"Impairment Level\",\n",
+    "                                                        \"V1_Driver_\": \"Age\",\n",
+    "                                                        \"Factors_Ro\": \"Road Conditions\",\n",
+    "                                                        \"X\": \"Latitude\",\n",
+    "                                                        \"Y\": \"Longitude\"})\n",
+    "clean_traffic_data.head(3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "7e62c050",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>County</th>\n",
+       "      <th>Crash Severity</th>\n",
+       "      <th>Crash Date</th>\n",
+       "      <th>Weather</th>\n",
+       "      <th>Crash Type</th>\n",
+       "      <th>Impairment Level</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Road Conditions</th>\n",
+       "      <th>Lighting</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CLARK</td>\n",
+       "      <td>PROPERTY DAMAGE ONLY</td>\n",
+       "      <td>01/01/2016</td>\n",
+       "      <td>CLEAR</td>\n",
+       "      <td>REAR-END</td>\n",
+       "      <td>APPARENTLY NORMAL</td>\n",
+       "      <td>49</td>\n",
+       "      <td>DRY</td>\n",
+       "      <td>DAYLIGHT</td>\n",
+       "      <td>-115.296856</td>\n",
+       "      <td>36.282588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CLARK</td>\n",
+       "      <td>INJURY CRASH</td>\n",
+       "      <td>01/01/2016</td>\n",
+       "      <td>CLEAR</td>\n",
+       "      <td>NON-COLLISION</td>\n",
+       "      <td>HAD BEEN DRINKING</td>\n",
+       "      <td>22</td>\n",
+       "      <td>DRY</td>\n",
+       "      <td>DARK - NO LIGHTING</td>\n",
+       "      <td>-115.305960</td>\n",
+       "      <td>36.313917</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  County        Crash Severity  Crash Date Weather     Crash Type  \\\n",
+       "0  CLARK  PROPERTY DAMAGE ONLY  01/01/2016   CLEAR       REAR-END   \n",
+       "1  CLARK          INJURY CRASH  01/01/2016   CLEAR  NON-COLLISION   \n",
+       "\n",
+       "    Impairment Level  Age Road Conditions            Lighting    Latitude  \\\n",
+       "0  APPARENTLY NORMAL   49             DRY            DAYLIGHT -115.296856   \n",
+       "1  HAD BEEN DRINKING   22             DRY  DARK - NO LIGHTING -115.305960   \n",
+       "\n",
+       "   Longitude  \n",
+       "0  36.282588  \n",
+       "1  36.313917  "
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_traffic_data = clean_traffic_data.dropna()\n",
+    "clean_traffic_data.head(2)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e62c050",
+   "id": "0e14d4c3",
    "metadata": {},
    "outputs": [],
    "source": []
