added a is null to the end to double check dropped data

--- a/Traffic.ipynb
+++ b/Traffic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "d8e44207",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
        "4 -115.312353  36.327534  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "c95e8846",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "fc638e03",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "43ed0fb4",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
        "[12720 rows x 11 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "6bb43ed8",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
        "[9714 rows x 11 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "db91ab3e",
    "metadata": {},
    "outputs": [
@@ -786,7 +786,7 @@
        "9714"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,8 +798,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0981d0ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "County              0.0\n",
+       "Crash Severity      0.0\n",
+       "Crash Date          0.0\n",
+       "Weather             0.0\n",
+       "Crash Type          0.0\n",
+       "Impairment Level    0.0\n",
+       "Age                 0.0\n",
+       "Road Conditions     0.0\n",
+       "Lighting            0.0\n",
+       "Latitude            0.0\n",
+       "Longitude           0.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# double checking to see if rows with missing data was dropped\n",
+    "clean_traffic_data.isnull().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14206ff1",
    "metadata": {},
    "outputs": [],
    "source": []
